# causal-inference-in-retail

./: README.md  index.html  pyproject.toml  requirements.txt
docs/: causal_blog.html
notebooks/: 00_eda.ipynb  01_causal_graph.ipynb  02_uplift_modeling.ipynb  03_sensitivity.ipynb
reports/: Causal_Inference_Tutorial.pptx  strategy_recommendation.md  tutorial_presentation.md
scripts/: generate_figures.py  generate_pptx.py  generate_retail_data.py
